# mic-proxy-recorder

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: build-installers.yml
docs/: USER_GUIDE.md
scripts/: build.sh  download-blackhole-pkg.sh  parakeet_transcribe.py  requirements-parakeet.txt  setup-parakeet-venv.sh
specs/: BLACKHOLE_BUNDLE.md  KRISP_STYLE_GOALS.md  RECORDINGS.md  RELAY_HUB_ARCHITECTURE.md  TRANSCRIPTION.md  VIRTUAL_AUDIO.md
src/: App.tsx  styles.css  tauri-shims.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/blackhole/: README.md  THIRD_PARTY_NOTICES.md
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/audio/: capture.rs  meeting_bridge.rs  mod.rs  processor.rs  recorder.rs
src-tauri/src/transcription/: mod.rs  parakeet.rs  whisper.rs
src/components/: DeviceSelector.tsx  MeetingBridgePanel.tsx  NoiseCancelPanel.tsx  RecorderControls.tsx  RecordingAudio.tsx  RecordingLevelMeter.tsx  RecordingsList.tsx  SettingsPanel.tsx  StatusBar.tsx  TranscriptPane.tsx
