[package]
name = "mic-proxy-recorder"
version = "0.1.0"
description = "Local mic proxy with noise cancellation and offline speech-to-text transcription"
authors = []
edition = "2021"

[lib]
name = "mic_proxy_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
num_cpus = "1"

# Audio capture
cpal = "0.15"

# WAV recording
hound = "3.5"

# Noise cancellation (pure-Rust RNNoise)
nnnoiseless = "0.5"

# Whisper transcription (bindings to whisper.cpp)
# NOTE: requires LIBCLANG and a C++ compiler at build time
# Users must have cmake installed
whisper-rs = { version = "0.11", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
